--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -600,18 +600,43 @@ video {
   border-width: 4px;
   --tw-border-opacity: 1;
   border-color: rgb(0 0 0 / var(--tw-border-opacity));
-  padding-left: 2rem;
-  padding-right: 2rem;
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
+  padding-left: 3rem;
+  padding-right: 3rem;
+  padding-top: 0px;
+  padding-bottom: 0px;
   font-family: raleway, sans-serif;
-  font-size: 1.25rem;
+  font-size: 1.125rem;
   line-height: 1.75rem;
   font-weight: 700;
   text-transform: uppercase;
-  transition-property: all;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
   transition-duration: 300ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media (min-width: 640px){
+  .custom-btn{
+    padding-left: 5rem;
+    padding-right: 5rem;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+}
+
+@media (min-width: 1536px){
+  .custom-btn{
+    border-width: 8px;
+    padding-left: 7rem;
+    padding-right: 7rem;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
 }
 
 .custom-btn:where(.dark, .dark *){
@@ -621,8 +646,8 @@ video {
 
 .headingText{
   font-family: rokkitt, sans-serif;
-  font-size: 3rem;
-  line-height: 1;
+  font-size: 1.875rem;
+  line-height: 2.25rem;
   font-weight: 900;
   text-transform: uppercase;
   letter-spacing: 0.1em;
@@ -630,7 +655,7 @@ video {
 
 @media (min-width: 640px){
   .headingText{
-    font-size: 4.5rem;
+    font-size: 6rem;
     line-height: 1;
   }
 }
@@ -646,6 +671,12 @@ video {
   .headingText{
     font-size: 8rem;
     line-height: 1;
+  }
+}
+
+@media (min-width: 1536px){
+  .headingText{
+    font-size: 12rem;
   }
 }
 
@@ -2526,10 +2557,20 @@ video {
   transition-duration: 150ms;
 }
 
+.transition-colors{
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
 .transition-transform{
   transition-property: transform;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
+}
+
+.duration-300{
+  transition-duration: 300ms;
 }
 
 .duration-500{
@@ -2538,10 +2579,6 @@ video {
 
 .duration-700{
   transition-duration: 700ms;
-}
-
-.duration-300{
-  transition-duration: 300ms;
 }
 
 .ease-in{
@@ -2618,6 +2655,7 @@ video {
   stroke-dashoffset: 0;
   stroke-dasharray: 3000;
   animation: draw 5s cubic-bezier(0.445, 0.05, 0.55, 0.95) 0s forwards infinite;
+  animation: name duration timing-function delay iteration-count direction fill-mode;
 }
 
 @keyframes draw {
@@ -2627,6 +2665,26 @@ video {
 
   to {
     stroke-dashoffset: 3000;
+  }
+}
+
+@keyframes removePage {
+  from {
+    opacity: 100%;
+  }
+
+  to {
+    opacity: 0%;
+  }
+}
+
+@keyframes addPage {
+  from {
+    opacity: 0%;
+  }
+
+  to {
+    opacity: 100%
   }
 }
 
@@ -2728,6 +2786,36 @@ video {
   }
 }
 
+@media (min-width: 1536px){
+  .\32xl\:h-24{
+    height: 6rem;
+  }
+
+  .\32xl\:w-24{
+    width: 6rem;
+  }
+
+  .\32xl\:text-5xl{
+    font-size: 3rem;
+    line-height: 1;
+  }
+
+  .\32xl\:text-6xl{
+    font-size: 3.75rem;
+    line-height: 1;
+  }
+
+  .group:hover .\32xl\:group-hover\:-translate-x-4{
+    --tw-translate-x: -1rem;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+
+  .group:hover .\32xl\:group-hover\:-translate-y-4{
+    --tw-translate-y: -1rem;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+}
+
 .dark\:bg-amber-400:where(.dark, .dark *){
   --tw-bg-opacity: 1;
   background-color: rgb(251 191 36 / var(--tw-bg-opacity));
@@ -2743,19 +2831,14 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.dark\:text-cyan-500:where(.dark, .dark *){
+.dark\:text-cyan-300:where(.dark, .dark *){
   --tw-text-opacity: 1;
-  color: rgb(6 182 212 / var(--tw-text-opacity));
+  color: rgb(103 232 249 / var(--tw-text-opacity));
 }
 
 .dark\:text-white:where(.dark, .dark *){
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.dark\:text-cyan-300:where(.dark, .dark *){
-  --tw-text-opacity: 1;
-  color: rgb(103 232 249 / var(--tw-text-opacity));
 }
 
 @media (min-width: 1024px){
