--- a/assets/css/input.css
+++ b/assets/css/input.css
@@ -16,7 +16,7 @@
     }
 
     .card-container {
-        @apply col-span-12 md:col-span-4 relative overflow-hidden rounded-2xl opacity-100 transition
+        @apply col-span-12 lg:col-span-4 relative overflow-hidden rounded-2xl opacity-100 transition border-2 border-white
     }
 
     .img-container {
@@ -47,7 +47,7 @@
     width: 5px;
 }
 *::-webkit-scrollbar-track {
-    background-color: black;
+    background-color: transparent;
     border-radius: 50px;
     padding: 2px;
 }
@@ -61,6 +61,16 @@
     stroke-dasharray: 3000;
     animation: draw 5s cubic-bezier(0.445, 0.05, 0.55, 0.95) 0s forwards infinite;
     animation: name duration timing-function delay iteration-count direction fill-mode;
+}
+
+
+@keyframes animateSwitch {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
 }
 
 
