--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -646,8 +646,8 @@ video {
 
 .headingText{
   font-family: rokkitt, sans-serif;
-  font-size: 2.25rem;
-  line-height: 2.5rem;
+  font-size: 3rem;
+  line-height: 1;
   font-weight: 900;
   text-transform: uppercase;
   letter-spacing: 0.1em;
@@ -684,6 +684,8 @@ video {
 .card-container{
   position: relative;
   grid-column: span 12 / span 12;
+  height: 11rem;
+  width: 100%;
   overflow: hidden;
   border-radius: 1rem;
   border-width: 2px;
@@ -695,6 +697,12 @@ video {
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
+}
+
+@media (min-width: 640px){
+  .card-container{
+    height: 14rem;
+  }
 }
 
 @media (min-width: 1024px){
@@ -870,32 +878,24 @@ video {
   isolation: auto;
 }
 
-.z-40{
-  z-index: 40;
-}
-
 .col-span-12{
   grid-column: span 12 / span 12;
 }
 
-.col-span-2{
-  grid-column: span 2 / span 2;
+.col-span-4{
+  grid-column: span 4 / span 4;
 }
 
 .col-start-1{
   grid-column-start: 1;
 }
 
-.col-start-4{
-  grid-column-start: 4;
+.col-start-3{
+  grid-column-start: 3;
 }
 
-.col-start-6{
-  grid-column-start: 6;
-}
-
-.col-start-8{
-  grid-column-start: 8;
+.col-start-7{
+  grid-column-start: 7;
 }
 
 .float-start{
@@ -1073,6 +1073,10 @@ video {
   max-height: 70vh;
 }
 
+.max-h-dvh{
+  max-height: 100dvh;
+}
+
 .max-h-screen{
   max-height: 100vh;
 }
@@ -1083,6 +1087,10 @@ video {
 
 .min-h-\[70vh\]{
   min-height: 70vh;
+}
+
+.min-h-dvh{
+  min-height: 100dvh;
 }
 
 .min-h-screen{
@@ -1647,10 +1655,6 @@ video {
 
 .gap-4{
   gap: 1rem;
-}
-
-.gap-8{
-  gap: 2rem;
 }
 
 .gap-x-8{
@@ -2272,12 +2276,12 @@ video {
      object-fit: scale-down;
 }
 
-.p-12{
-  padding: 3rem;
-}
-
 .p-2{
   padding: 0.5rem;
+}
+
+.p-8{
+  padding: 2rem;
 }
 
 .px-4{
@@ -2387,11 +2391,6 @@ video {
 
 .text-5xl{
   font-size: 3rem;
-  line-height: 1;
-}
-
-.text-7xl{
-  font-size: 4.5rem;
   line-height: 1;
 }
 
@@ -2925,6 +2924,14 @@ video {
   box-shadow: 0px 0px 80px 1px white;
 }
 
+body, div, button, a {
+  cursor: url('../images/cursor.png') 8 8, auto;
+}
+
+#modal {
+  cursor: url('../images/cursor.png') 8 8, auto;
+}
+
 * {
   scrollbar-width: 2px;
   scrollbar-color: seagreen;
@@ -3094,63 +3101,9 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.group:hover .group-hover\:cursor-none{
-  cursor: none;
-}
-
 .group:hover .group-hover\:bg-black{
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
-}
-
-.group:hover .group-hover\:text-white{
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.group:hover .group-hover\:text-blue-600{
-  --tw-text-opacity: 1;
-  color: rgb(37 99 235 / var(--tw-text-opacity));
-}
-
-.group:hover .group-hover\:text-blue-500{
-  --tw-text-opacity: 1;
-  color: rgb(59 130 246 / var(--tw-text-opacity));
-}
-
-.group:hover .group-hover\:text-blue-400{
-  --tw-text-opacity: 1;
-  color: rgb(96 165 250 / var(--tw-text-opacity));
-}
-
-.group:hover .group-hover\:text-gray-950{
-  --tw-text-opacity: 1;
-  color: rgb(3 7 18 / var(--tw-text-opacity));
-}
-
-.group:hover .group-hover\:text-rose-500{
-  --tw-text-opacity: 1;
-  color: rgb(244 63 94 / var(--tw-text-opacity));
-}
-
-.group:hover .group-hover\:text-emerald-500{
-  --tw-text-opacity: 1;
-  color: rgb(16 185 129 / var(--tw-text-opacity));
-}
-
-.group:hover .group-hover\:text-orange-300{
-  --tw-text-opacity: 1;
-  color: rgb(253 186 116 / var(--tw-text-opacity));
-}
-
-.group:hover .group-hover\:text-yellow-400{
-  --tw-text-opacity: 1;
-  color: rgb(250 204 21 / var(--tw-text-opacity));
-}
-
-.group:hover .group-hover\:text-orange-500{
-  --tw-text-opacity: 1;
-  color: rgb(249 115 22 / var(--tw-text-opacity));
 }
 
 .group:hover .group-hover\:text-amber-400{
@@ -3158,9 +3111,29 @@ video {
   color: rgb(251 191 36 / var(--tw-text-opacity));
 }
 
-.group:hover .group-hover\:text-amber-500{
+.group:hover .group-hover\:text-blue-400{
   --tw-text-opacity: 1;
-  color: rgb(245 158 11 / var(--tw-text-opacity));
+  color: rgb(96 165 250 / var(--tw-text-opacity));
+}
+
+.group:hover .group-hover\:text-blue-500{
+  --tw-text-opacity: 1;
+  color: rgb(59 130 246 / var(--tw-text-opacity));
+}
+
+.group:hover .group-hover\:text-emerald-500{
+  --tw-text-opacity: 1;
+  color: rgb(16 185 129 / var(--tw-text-opacity));
+}
+
+.group:hover .group-hover\:text-orange-500{
+  --tw-text-opacity: 1;
+  color: rgb(249 115 22 / var(--tw-text-opacity));
+}
+
+.group:hover .group-hover\:text-yellow-400{
+  --tw-text-opacity: 1;
+  color: rgb(250 204 21 / var(--tw-text-opacity));
 }
 
 .group:hover .group-hover\:opacity-0{
@@ -3172,6 +3145,14 @@ video {
 }
 
 @media (min-width: 640px){
+  .sm\:gap-8{
+    gap: 2rem;
+  }
+
+  .sm\:p-12{
+    padding: 3rem;
+  }
+
   .sm\:px-4{
     padding-left: 1rem;
     padding-right: 1rem;
@@ -3182,9 +3163,19 @@ video {
     padding-right: 2rem;
   }
 
+  .sm\:py-0{
+    padding-top: 0px;
+    padding-bottom: 0px;
+  }
+
   .sm\:text-3xl{
     font-size: 1.875rem;
     line-height: 2.25rem;
+  }
+
+  .sm\:text-7xl{
+    font-size: 4.5rem;
+    line-height: 1;
   }
 
   .sm\:leading-none{
@@ -3205,12 +3196,46 @@ video {
     grid-column-start: 4;
   }
 
+  .md\:max-h-dvh{
+    max-height: 100dvh;
+  }
+
+  .md\:max-h-screen{
+    max-height: 100vh;
+  }
+
+  .md\:min-h-dvh{
+    min-height: 100dvh;
+  }
+
+  .md\:min-h-screen{
+    min-height: 100vh;
+  }
+
   .md\:gap-8{
     gap: 2rem;
   }
 
   .md\:p-8{
     padding: 2rem;
+  }
+}
+
+@media (min-width: 1024px){
+  .lg\:col-span-2{
+    grid-column: span 2 / span 2;
+  }
+
+  .lg\:col-start-4{
+    grid-column-start: 4;
+  }
+
+  .lg\:col-start-6{
+    grid-column-start: 6;
+  }
+
+  .lg\:col-start-8{
+    grid-column-start: 8;
   }
 }
 
@@ -3287,11 +3312,6 @@ video {
 .group:hover .dark\:group-hover\:bg-white:where(.dark, .dark *){
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.group:hover .dark\:group-hover\:text-black:where(.dark, .dark *){
-  --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
 @media (min-width: 1024px){
