--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -878,24 +878,16 @@ video {
   isolation: auto;
 }
 
+.z-0{
+  z-index: 0;
+}
+
 .z-10{
   z-index: 10;
 }
 
 .z-20{
   z-index: 20;
-}
-
-.z-40{
-  z-index: 40;
-}
-
-.-z-10{
-  z-index: -10;
-}
-
-.z-0{
-  z-index: 0;
 }
 
 .col-span-12{
@@ -2177,11 +2169,6 @@ video {
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
-.bg-red-500{
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
-}
-
 .bg-white{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -2553,6 +2540,26 @@ video {
   color: rgb(250 204 21 / var(--tw-text-opacity));
 }
 
+.text-yellow-500{
+  --tw-text-opacity: 1;
+  color: rgb(234 179 8 / var(--tw-text-opacity));
+}
+
+.text-yellow-300{
+  --tw-text-opacity: 1;
+  color: rgb(253 224 71 / var(--tw-text-opacity));
+}
+
+.text-yellow-200{
+  --tw-text-opacity: 1;
+  color: rgb(254 240 138 / var(--tw-text-opacity));
+}
+
+.text-yellow-100{
+  --tw-text-opacity: 1;
+  color: rgb(254 249 195 / var(--tw-text-opacity));
+}
+
 .underline{
   text-decoration-line: underline;
 }
@@ -2881,6 +2888,10 @@ video {
   transition-duration: 150ms;
 }
 
+.duration-200{
+  transition-duration: 200ms;
+}
+
 .duration-300{
   transition-duration: 300ms;
 }
@@ -2958,10 +2969,6 @@ video {
 /* Components */
 
 /* Custom CSS */
-
-#darkSwitch {
-  box-shadow: 0px 0px 80px 1px white;
-}
 
 body, div, button, a {
   cursor: url('../images/cursor.png') 8 8, auto;
